--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@headlessui/react": "^2.0.4",
+    "@hookform/resolvers": "^3.4.2",
     "@mui/material": "^5.15.19",
     "@phosphor-icons/react": "^2.1.5",
     "@tanstack/react-query": "^5.40.0",
     "axios": "^1.7.2",
+    "jwt-decode": "^4.0.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.5",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.35.6",
