--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@phosphor-icons/react": "^2.1.5",
     "@tanstack/react-query": "^5.40.0",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "jwt-decode": "^4.0.0",
     "next": "14.2.3",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "react-hot-toast": "^2.4.1",
